--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/stack": "^7.1.1",
     "react": "18.3.1",
     "react-native": "0.77.0",
+    "react-native-bluetooth-escpos-printer": "github:dacilsk/react-native-bluetooth-escpos-printer",
     "react-native-gesture-handler": "^2.23.1",
     "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "^5.2.0",
