--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -88,6 +88,14 @@ android {
         versionName "1.0"
     }
     signingConfigs {
+        release {
+            if (project.hasProperty('RECEIPT_GENERATOR_UPLOAD_STORE_FILE')) {
+                storeFile file(RECEIPT_GENERATOR_UPLOAD_STORE_FILE)
+                storePassword RECEIPT_GENERATOR_UPLOAD_STORE_PASSWORD
+                keyAlias RECEIPT_GENERATOR_UPLOAD_KEY_ALIAS
+                keyPassword RECEIPT_GENERATOR_UPLOAD_KEY_PASSWORD
+            }
+        }
         debug {
             storeFile file('debug.keystore')
             storePassword 'android'
@@ -103,6 +111,7 @@ android {
             // Caution! In production, you need to generate your own keystore file.
             // see https://reactnative.dev/docs/signed-apk-android.
             signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
